	PR bootstrap/49086 	* gimple-fold.c (and_comparisons_1, or_comparisons_1): Return NULL 	for PHI args that are SSA_NAME_IS_DEFAULT_DEF.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@173967 138bc75d-0d04-0410-961f-82ee72b054a4